<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auditnav</name>
  <version>1.0.0</version>
  <description>
    AuditNav: Vision-Language Navigation with Semantic Topological Memory.
    Code for IROS submission. Integrates LiDAR mapping, open-vocabulary
    object detection, VLM-based semantic memory, and A*-based topological
    navigation for natural-language-guided robot navigation.
  </description>

  <maintainer email="anonymous@review.iros">Anonymous Author</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 runtime -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Test -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
